--- a/ruff.toml
+++ b/ruff.toml
@@ -1,22 +1,1 @@
-# Ruff configuration
-[tool.ruff]
-# Same as Black.
-line-length = 120
-indent-width = 4
-
-# Update to Python 3.12
-target-version = "py312"
-
-# Exclude notebooks and other common paths
-exclude = [
-    ".git",
-    ".mypy_cache",
-    ".ruff_cache",
-    ".venv",
-    "__pycache__",
-    "*.ipynb",
-    "notebooks/*",
-]
-
-[tool.ruff.lint]
-# Enable Pyflakes (`
+.config/ruff/ruff.toml
