--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Add these lines to your existing .gitignore
+ruff.toml
+mypy.ini
+.pre-commit-config.yaml
+!.config/**
