--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,18 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "chromadb>=0.6.3",
+    "fastapi>=0.115.8",
+    "langchain>=0.3.19",
+    "numpy>=2.2.3",
+    "pandas>=2.2.3",
+    "scikit-learn>=1.6.1",
+    "sentence-transformers>=3.4.1",
+    "torch>=2.6.0",
+    "transformers>=4.49.0",
+    "uvicorn>=0.34.0",
+]
 
 [tool.bandit]
 exclude_dirs = ["tests", "notebooks"]
@@ -12,3 +23,13 @@ skips = ["B101"]  # Skip assert statements
 
 [tool.bandit.assert_used]
 skips = ["*_test.py", "test_*.py"]
+
+[dependency-groups]
+dev = [
+    "jupyter>=1.1.1",
+    "mypy>=1.15.0",
+    "nbqa>=1.9.1",
+    "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.9.7",
+]
