--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,9 +114,7 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
-        run: |
-          uv pip install --system pytest pytest-cov
-          uv pip install --system -r requirements.txt
+        run: uv pip install --system ".[test]"
 
       - name: Run tests with coverage
         run: pytest --cov=src tests/ --cov-report=xml
