--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,25 +45,13 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.12"] # Enforcing only Python 3.12 due to requirement
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Cache UV and dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/uv
-            ~/.local/bin
-          key: ${{ runner.os }}-python-${{ matrix.python-version }}-uv-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-python-${{ matrix.python-version }}-uv-
+          python-version: "3.12"
 
       - name: Install UV
         run: |
@@ -71,10 +59,13 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
-        run: uv pip install --system ".[dev]"
+        run: |
+          uv pip install --system ruff pytest pytest-cov
+          uv pip install --system ".[dev]"
 
-      - name: Run Ruff format check on Python files
-        run: ruff format --check --config .config/ruff/ruff.toml "src/" "tests/"
+      - name: Run Ruff format check
+        run: |
+          ruff format --check --config .config/ruff/ruff.toml "src/" "tests/"
 
       - name: Run Ruff linting on Python files
         run: ruff check --config .config/ruff/ruff.toml "src/" "tests/"
@@ -88,25 +79,13 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.12"] # Enforcing only Python 3.12
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Cache UV and dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/uv
-            ~/.local/bin
-          key: ${{ runner.os }}-python-${{ matrix.python-version }}-uv-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-python-${{ matrix.python-version }}-uv-
+          python-version: "3.12"
 
       - name: Install UV
         run: |
@@ -114,10 +93,13 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
-        run: uv pip install --system ".[test]"
+        run: |
+          uv pip install --system pytest pytest-cov
+          uv pip install --system ".[dev]"
 
       - name: Run tests with coverage
-        run: pytest --cov=src tests/ --cov-report=xml
+        run: |
+          pytest --cov=src/llm_rag tests/ --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
