--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,11 +64,10 @@ jobs:
           uv pip install --system ".[dev]"
 
       - name: Run Ruff format check
-        run: |
-          ruff format --check --config .config/ruff/ruff.toml "src/" "tests/"
+        run: ruff format --check "src/" "tests/"
 
-      - name: Run Ruff linting on Python files
-        run: ruff check --config .config/ruff/ruff.toml "src/" "tests/"
+      - name: Run Ruff linting
+        run: ruff check "src/" "tests/"
 
       - name: Run Ruff on notebooks
         run: nbqa ruff notebooks/
@@ -79,13 +78,16 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install UV
         run: |
@@ -98,22 +100,39 @@ jobs:
           uv pip install --system ".[dev]"
 
       - name: Run tests with coverage
-        run: |
-          pytest --cov=src/llm_rag tests/ --cov-report=xml
+        run: pytest --cov=src/llm_rag tests/ --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
-          fail_ci_if_error: true
+          fail_ci_if_error: false
+          verbose: true
 
   build:
-    needs: [lint, test, security]
+    needs: [security, lint, test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: |
-          docker build -t llm-rag --build-arg PYTHON_VERSION=3.12 .
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:buildcache,mode=max
