--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,6 +19,17 @@ jobs:
         with:
           python-version: "3.12"
 
+      # Add cache before installing UV
+      - name: Cache UV packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/uv
+            ~/.cache/pip
+          key: ${{ runner.os }}-uv-security-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-security-
+
       - name: Install UV
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -43,6 +54,18 @@ jobs:
         with:
           python-version: "3.12"
 
+      # Add cache before installing UV
+      - name: Cache UV packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/uv
+            ~/.cache/pip
+            ~/.cache/pre-commit
+          key: ${{ runner.os }}-uv-lint-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-lint-
+
       - name: Install UV
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -62,17 +85,6 @@ jobs:
       - name: Run mypy
         run: mypy src tests
 
-      - name: Cache UV packages
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/uv
-            ~/.cache/pre-commit  # Only for lint job
-            .pytest_cache  # Only for test job
-          key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-uv-
-
   test:
     runs-on: ubuntu-latest
     steps:
@@ -82,6 +94,18 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
+
+      # Add cache before installing UV
+      - name: Cache UV packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/uv
+            ~/.cache/pip
+            .pytest_cache
+          key: ${{ runner.os }}-uv-test-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-test-
 
       - name: Install UV
         run: |
@@ -115,19 +139,22 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
-          cache: "uv" # Enable UV caching
 
-      # Cache UV packages
+      # Add cache before installing UV
       - name: Cache UV packages
         uses: actions/cache@v3
         with:
           path: |
             ~/.cache/uv
-            ~/.cache/pre-commit
-            .pytest_cache
-          key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml') }}
+            ~/.cache/pip
+          key: ${{ runner.os }}-uv-build-${{ hashFiles('pyproject.toml') }}
           restore-keys: |
-            ${{ runner.os }}-uv-
+            ${{ runner.os }}-uv-build-
+
+      - name: Install UV
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       # Cache Docker layers
       - name: Cache Docker layers
