--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,48 @@
+default_install_hook_types:
+  - pre-commit
+  - post-checkout
+  - post-merge
+  - post-rewrite
+
 repos:
--   repo: https://github.com/astral-sh/ruff-pre-commit
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.5.24
+    hooks:
+      - id: uv-lock
+      - id: uv-sync
+        args: ["--locked"]
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.1.5
     hooks:
-    -   id: ruff
+      - id: ruff
         args: [--fix]
-    -   id: ruff-format
+      - id: ruff-format
 
--   repo: https://github.com/pre-commit/mirrors-mypy
+  - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.5.1
     hooks:
-    -   id: mypy
+      - id: mypy
         additional_dependencies:
-            - types-requests
-            - types-setuptools
-            - pytest
+          - types-requests
+          - types-setuptools
+          - pytest
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-toml
+      - id: check-added-large-files
 
 # Add this to ensure hooks run on commit
 default_language_version:
-    python: python3.12 
+    python: python3.12
+
+default_stages: [pre-commit, pre-push]
+
+ci:
+    autofix_commit_msg: 'ci: auto fixes from pre-commit hooks'
+    autoupdate_commit_msg: 'ci: pre-commit autoupdate'
