Apply ruff formatting

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -81,7 +81,7 @@ jobs:
           uv pip install --system ".[dev]"
 
       - name: Run Ruff format check
-        run: ruff format --check "src/" "tests/"
+        run: ruff format "src/" "tests/"
 
       - name: Run Ruff linting
         run: ruff check "src/" "tests/"
