--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,6 +136,18 @@ ignore_missing_imports = true
 module = "sentence_transformers.*"
 ignore_missing_imports = true
 
+[[tool.mypy.overrides]]
+module = "langchain.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "langchain_community.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "pytest.*"
+ignore_missing_imports = true
+
 [tool.semantic_release]
 version_variable = ["src/llm_rag/__init__.py:__version__"]
 version_toml = ["pyproject.toml:project.version"]
