fix: further simplify semantic-release configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,8 +155,7 @@ branch = "main"
 upload_to_pypi = false
 upload_to_release = true
 build_command = "pip install build && python -m build"
-commit_message = "{version}\n\n{changelog}"
+commit_message = "{version}"
 changelog_file = "CHANGELOG.md"
-changelog_scope = false
 major_on_zero = false
 tag_format = "v{version}"
