fix: update build command to use uv and update Docker actions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,7 +154,7 @@ version_toml = ["pyproject.toml:project.version"]
 branch = "main"
 upload_to_pypi = false
 upload_to_release = true
-build_command = "pip install build && python -m build"
+build_command = "uv pip install build && python -m build"
 commit_message = "{version}"
 changelog_file = "CHANGELOG.md"
 major_on_zero = false
