--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,10 +5,19 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  schedule:
-    - cron: "0 0 * * *" # Daily at midnight UTC
+  workflow_dispatch:
+    inputs:
+      deploy_target:
+        description: "Environment to deploy to"
+        required: false
+        default: "dev"
+        type: choice
+        options:
+          - dev
+          - staging
 
 jobs:
+  # Security scanning job
   security:
     runs-on: ubuntu-latest
     env:
@@ -46,6 +55,7 @@ jobs:
       - name: Run Safety Check
         run: safety check
 
+  # Linting job
   lint:
     runs-on: ubuntu-latest
     env:
@@ -89,6 +99,7 @@ jobs:
       - name: Run mypy
         run: mypy src tests
 
+  # Testing job
   test:
     runs-on: ubuntu-latest
     env:
@@ -139,10 +150,49 @@ jobs:
           fail_ci_if_error: false
           verbose: true
 
-  build:
-    needs: [security, lint, test]
+  # Semantic release job - only runs on main branch pushes
+  semantic-release:
+    needs: [lint, test]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Python Setup
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install python-semantic-release
+
+      - name: Configure Git
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+
+      - name: Semantic Release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          semantic-release publish
+
+  # Build job - only runs on main branch after all checks pass
+  build:
+    needs: [security, lint, test, semantic-release]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     env:
       UV_LINK_MODE: copy
     steps:
@@ -229,11 +279,11 @@ jobs:
           curl -s -H "Authorization: Bearer ${{ secrets.DOCKERHUB_TOKEN }}" \
             "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/llm-rag/tags/" | jq .
 
-  # Add deployment jobs after the build job
+  # Development deployment - only runs on main branch
   deploy-dev:
     needs: [build]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'dev'))
     # Note: Create 'development' environment in GitHub repository settings before uncommenting
     # environment: development
     steps:
@@ -260,10 +310,11 @@ jobs:
           kubectl apply -f k8s/deployment.yaml
           kubectl rollout status deployment/llm-rag
 
+  # Staging deployment - only runs when manually triggered with staging option
   deploy-staging:
     needs: [deploy-dev]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'workflow_dispatch'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'staging'
     # Note: Create 'staging' environment in GitHub repository settings before uncommenting
     # environment: staging
     steps:
