fix: add security-events write permission to workflows for SARIF uploads

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,11 @@
 name: CI/CD Pipeline
 
+# Add permissions at the workflow level
+permissions:
+  actions: read
+  contents: read
+  security-events: write # Required for uploading SARIF results
+
 on:
   push:
     branches: [main]
