--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -8,6 +8,12 @@ on:
   schedule:
     - cron: "0 0 * * 0" # Run weekly on Sunday at midnight
 
+# Add permissions required for security scanning
+permissions:
+  actions: read
+  contents: read
+  security-events: write # Required for uploading SARIF results
+
 jobs:
   bandit:
     name: Bandit Security Scan
